kubernetes/hello-world-db.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-db
  template:
    metadata:
      labels:
        app: hello-world-db
    spec:
      containers:
        - name: hello-world-db
          image: mysql:5.7
          ports:
            - name: db-port
              containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim

---

apiVersion: v1
kind: Service
metadata:
  name: hello-world-db-service
spec:
  selector:
    app: hello-world-db
  ports:
    - protocol: TCP
      port: 3306
  type: NodePort
