kubernetes/hello-world-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
spec:
  # Replicas are defined by the autoscaler
  # replicas: 3
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world-container
          image: alexrolea/hello-world:1.0.0
          imagePullPolicy: Always
          ports:
            - name: hello-port
              containerPort: 8081
          livenessProbe:
            httpGet:
              path: /hello
              port: hello-port
            initialDelaySeconds: 60
            timeoutSeconds: 5
          # Wait for service init before routing traffic to instance
          readinessProbe:
            httpGet:
              path: /hello
              port: hello-port
            initialDelaySeconds: 30
            timeoutSeconds: 5

---

apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  selector:
    app: hello-world
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8081
  type: NodePort

---

# Ingress controllers are an alternative to LBs
# The ingress addon has to be enabled (for minikube usage)
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-ingress-controller
spec:
  rules:
    - host: helloworld.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: hello-world-service
              servicePort: 80
