kubernetes/hello-world-ingress.yml
apiVersion: extensions/v1beta1
# Ingress controllers are an alternative to LBs
kind: Ingress
metadata:
  name: helloworld-ingress-controller
spec:
  rules:
    - host: helloworld.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: hello-world-service
              servicePort: 80
